@@ -1,3 +1,6 @@
+2015-05-20 Franz Holzinger <franz@ttproducts.de>
+	* bug fix: invite must set enableAutoLoginOnInviteConfirmation for auto login
+
 2015-05-15 Franz Holzinger <franz@ttproducts.de>
 	* bug fix: no PHP warning message for wrong array indices - illegal string offset
 	* bug fix: invite and delete
